@@ -1,3 +1,3 @@
 minecraft_version=1.6.4
 forge_version=9.11.1.964
-mod_version=1.2.2b
+mod_version=1.2.2c
