@@ -63,10 +63,6 @@ public abstract class GuiMariculture extends GuiContainer {
 		if(features.size() > 0) drawFeatures(x, y);
 	}
 	
-	public void drawText(String str, int x, int z) {
-		fontRenderer.drawString(str, x, z, 4210752);
-	}
-	
 	public String getName() {
 		return this.name;
 	}
